--- a/LMSAngular/proxy.config.json
+++ b/LMSAngular/proxy.config.json
@@ -1,6 +1,6 @@
 {
   "/api/*": {
-    "target": "http://localhost:3000",
+    "target": "https://newserver-1wpb.onrender.com",
     "secure": false,
     "logLevel": "debug",
     "changeOrigin": true
